TestSuite/errors/err0526_deduce_generic_without_braces.pas
//!Невозможно вывести типы-параметры обобщённой подпрограммы f1 (укажите типы-параметры явно)
function f1<T> := 1;
begin
  var x := f1 + 2;
end.